--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     body {
       background-image: url("/download.jpg");
       color: #ffffff;
+      background-repeat: no-repeat;
     }
     h2{
       text-transform: capitalize;
