--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       background-image: url("/download.jpg");
       color: #ffffff;
       background-repeat: no-repeat;
+      bakground-position: center;
     }
     h2{
       text-transform: capitalize;
