--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       background-image: url("/download.jpg");
       color: #ffffff;
       background-repeat: no-repeat;
-      bakground-position: center;
+      bakground-position: cover;
     }
     h2{
       text-transform: capitalize;
